--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -1735,10 +1735,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "5276233a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Saved output/q1_validation.txt\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a validation report\n",
     "validation_report = f\"\"\"\n",
@@ -1763,6 +1771,8 @@
     "\n",
     "# TODO: Save validation_report to output/q1_validation.txt\n",
     "# Hint: Use open() with 'w' mode\n",
+    "with open(\"output/q1_validation.txt\", \"w\") as f:\n",
+    "    f.write(validation_report)\n",
     "\n",
     "print(\"✓ Saved output/q1_validation.txt\")"
    ]
