--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -1793,10 +1793,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "05f0b147",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1: 540 purchases\n",
+      "Q2: 546 purchases\n",
+      "Q3: 552 purchases\n",
+      "Q4: 362 purchases\n"
+     ]
+    }
+   ],
    "source": [
     "# Split purchases into quarterly datasets\n",
     "q1_purchases = purchases[purchases['purchase_date'] < '2023-04-01']\n",
@@ -1814,15 +1825,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "125fd04d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total after concat: 2000 purchases\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>purchase_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>purchase_date</th>\n",
+       "      <th>store</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>T0001</td>\n",
+       "      <td>C011</td>\n",
+       "      <td>P042</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-01-01 00:00:00</td>\n",
+       "      <td>Store C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>T0002</td>\n",
+       "      <td>C070</td>\n",
+       "      <td>P001</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 04:00:00</td>\n",
+       "      <td>Store A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>T0003</td>\n",
+       "      <td>C075</td>\n",
+       "      <td>P029</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-01-01 08:00:00</td>\n",
+       "      <td>Store A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>T0004</td>\n",
+       "      <td>C053</td>\n",
+       "      <td>P045</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-01-01 12:00:00</td>\n",
+       "      <td>Store C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>T0005</td>\n",
+       "      <td>C079</td>\n",
+       "      <td>P049</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-01-01 16:00:00</td>\n",
+       "      <td>Store B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  purchase_id customer_id product_id  quantity        purchase_date    store\n",
+       "0       T0001        C011       P042         1  2023-01-01 00:00:00  Store C\n",
+       "1       T0002        C070       P001         2  2023-01-01 04:00:00  Store A\n",
+       "2       T0003        C075       P029         1  2023-01-01 08:00:00  Store A\n",
+       "3       T0004        C053       P045         1  2023-01-01 12:00:00  Store C\n",
+       "4       T0005        C079       P049         3  2023-01-01 16:00:00  Store B"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Verify total rows: 540 + 546 + 552 + 362 = 2000\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Concatenate all quarters back together\n",
     "# Use ignore_index=True for clean sequential indexing\n",
     "# Hint: pd.concat([df1, df2, df3, df4], ignore_index=True)\n",
-    "all_purchases = None\n",
+    "all_purchases = pd.concat([q1_purchases, q2_purchases, q3_purchases, q4_purchases], ignore_index=True)\n",
     "\n",
     "print(f\"Total after concat: {len(all_purchases)} purchases\")\n",
     "display(all_purchases.head())\n",
@@ -1841,10 +1959,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "046d2b02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Satisfaction scores:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>satisfaction_score</th>\n",
+       "      <th>survey_date</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>customer_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C084</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C054</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-12-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C071</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-12-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C046</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-12-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C045</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-12-05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             satisfaction_score survey_date\n",
+       "customer_id                                \n",
+       "C084                          3  2023-12-01\n",
+       "C054                          1  2023-12-02\n",
+       "C071                          3  2023-12-03\n",
+       "C046                          3  2023-12-04\n",
+       "C045                          3  2023-12-05"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Loyalty tiers:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tier</th>\n",
+       "      <th>points</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>customer_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C009</th>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>8057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C071</th>\n",
+       "      <td>Silver</td>\n",
+       "      <td>9603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C083</th>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>7681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C029</th>\n",
+       "      <td>Platinum</td>\n",
+       "      <td>9755</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C064</th>\n",
+       "      <td>Silver</td>\n",
+       "      <td>9128</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 tier  points\n",
+       "customer_id                  \n",
+       "C009           Bronze    8057\n",
+       "C071           Silver    9603\n",
+       "C083           Bronze    7681\n",
+       "C029         Platinum    9755\n",
+       "C064           Silver    9128"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Create customer satisfaction scores (subset of customers)\n",
     "satisfaction = pd.DataFrame({\n",
@@ -1872,25 +2152,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "a6a3995b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>satisfaction_score</th>\n",
+       "      <th>survey_date</th>\n",
+       "      <th>tier</th>\n",
+       "      <th>points</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>customer_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C084</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2023-12-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C054</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2023-12-02</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>103.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C071</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2023-12-03</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>9603.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C046</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2023-12-04</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>2412.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C045</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2023-12-05</td>\n",
+       "      <td>Platinum</td>\n",
+       "      <td>1209.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C040</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2023-12-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C023</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2023-12-07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C081</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2023-12-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C011</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2023-12-09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C001</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2023-12-10</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>3754.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             satisfaction_score survey_date      tier  points\n",
+       "customer_id                                                  \n",
+       "C084                        3.0  2023-12-01       NaN     NaN\n",
+       "C054                        1.0  2023-12-02    Bronze   103.0\n",
+       "C071                        3.0  2023-12-03    Silver  9603.0\n",
+       "C046                        3.0  2023-12-04    Silver  2412.0\n",
+       "C045                        3.0  2023-12-05  Platinum  1209.0\n",
+       "C040                        9.0  2023-12-06       NaN     NaN\n",
+       "C023                        4.0  2023-12-07       NaN     NaN\n",
+       "C081                        6.0  2023-12-08       NaN     NaN\n",
+       "C011                        7.0  2023-12-09       NaN     NaN\n",
+       "C001                        5.0  2023-12-10      Gold  3754.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TODO: Horizontal concat to combine satisfaction and loyalty\n",
     "# Use outer join to keep all customers from both datasets\n",
     "# Hint: pd.concat([df1, df2], axis=1, join='outer')\n",
-    "customer_metrics = None\n",
+    "customer_metrics = pd.concat([satisfaction, loyalty], axis=1, join='outer')\n",
     "\n",
     "display(customer_metrics.head(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "f7470e72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing satisfaction scores: 30\n",
+      "Missing loyalty tiers: 20\n"
+     ]
+    }
+   ],
    "source": [
     "# Handle misaligned indexes - how many NaN values?\n",
     "print(f\"Missing satisfaction scores: {customer_metrics['satisfaction_score'].isna().sum()}\")\n",
@@ -1899,13 +2316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "f644d81f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Saved output/q2_combined_data.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Save customer_metrics to output/q2_combined_data.csv\n",
     "# Hint: Use .to_csv() - index will be saved automatically\n",
+    "customer_metrics.to_csv(\"q2_combined_data.csv\")\n",
     "\n",
     "print(\"✓ Saved output/q2_combined_data.csv\")"
    ]
