--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "b6e090d8",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "ad1b33a6",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "f3fabf13",
    "metadata": {},
    "outputs": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "86dfcb78",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "a6556487",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "797a79e7",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1111,7 @@
        "100"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "a71fc17e",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1132,7 @@
        "99"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "70870e00",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "3b66906c",
    "metadata": {},
    "outputs": [
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "40f98b85",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "8009793f",
    "metadata": {},
    "outputs": [
@@ -1710,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "18b527f6",
    "metadata": {},
    "outputs": [
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "5276233a",
    "metadata": {},
    "outputs": [
@@ -1793,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "05f0b147",
    "metadata": {},
    "outputs": [
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "125fd04d",
    "metadata": {},
    "outputs": [
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "046d2b02",
    "metadata": {},
    "outputs": [
@@ -2013,17 +2013,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C071</th>\n",
-       "      <td>3</td>\n",
+       "      <td>10</td>\n",
        "      <td>2023-12-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C046</th>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>2023-12-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C045</th>\n",
-       "      <td>3</td>\n",
+       "      <td>9</td>\n",
        "      <td>2023-12-05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2035,9 +2035,9 @@
        "customer_id                                \n",
        "C084                          3  2023-12-01\n",
        "C054                          1  2023-12-02\n",
-       "C071                          3  2023-12-03\n",
-       "C046                          3  2023-12-04\n",
-       "C045                          3  2023-12-05"
+       "C071                         10  2023-12-03\n",
+       "C046                          2  2023-12-04\n",
+       "C045                          9  2023-12-05"
       ]
      },
      "metadata": {},
@@ -2085,27 +2085,27 @@
        "    <tr>\n",
        "      <th>C009</th>\n",
        "      <td>Bronze</td>\n",
-       "      <td>8057</td>\n",
+       "      <td>8948</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C071</th>\n",
-       "      <td>Silver</td>\n",
-       "      <td>9603</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>6256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C083</th>\n",
-       "      <td>Bronze</td>\n",
-       "      <td>7681</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>8412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C029</th>\n",
        "      <td>Platinum</td>\n",
-       "      <td>9755</td>\n",
+       "      <td>1616</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C064</th>\n",
        "      <td>Silver</td>\n",
-       "      <td>9128</td>\n",
+       "      <td>532</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2114,11 +2114,11 @@
       "text/plain": [
        "                 tier  points\n",
        "customer_id                  \n",
-       "C009           Bronze    8057\n",
-       "C071           Silver    9603\n",
-       "C083           Bronze    7681\n",
-       "C029         Platinum    9755\n",
-       "C064           Silver    9128"
+       "C009           Bronze    8948\n",
+       "C071           Bronze    6256\n",
+       "C083           Silver    8412\n",
+       "C029         Platinum    1616\n",
+       "C064           Silver     532"
       ]
      },
      "metadata": {},
@@ -2152,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "a6a3995b",
    "metadata": {},
    "outputs": [
@@ -2202,64 +2202,64 @@
        "      <th>C054</th>\n",
        "      <td>1.0</td>\n",
        "      <td>2023-12-02</td>\n",
-       "      <td>Bronze</td>\n",
-       "      <td>103.0</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>8568.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C071</th>\n",
-       "      <td>3.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>2023-12-03</td>\n",
-       "      <td>Silver</td>\n",
-       "      <td>9603.0</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>6256.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C046</th>\n",
-       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>2023-12-04</td>\n",
        "      <td>Silver</td>\n",
-       "      <td>2412.0</td>\n",
+       "      <td>6258.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C045</th>\n",
-       "      <td>3.0</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>2023-12-05</td>\n",
-       "      <td>Platinum</td>\n",
-       "      <td>1209.0</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>5863.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C040</th>\n",
-       "      <td>9.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>2023-12-06</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C023</th>\n",
-       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>2023-12-07</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C081</th>\n",
-       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2023-12-08</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C011</th>\n",
-       "      <td>7.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>2023-12-09</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C001</th>\n",
-       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2023-12-10</td>\n",
-       "      <td>Gold</td>\n",
-       "      <td>3754.0</td>\n",
+       "      <td>Platinum</td>\n",
+       "      <td>9957.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2269,15 +2269,15 @@
        "             satisfaction_score survey_date      tier  points\n",
        "customer_id                                                  \n",
        "C084                        3.0  2023-12-01       NaN     NaN\n",
-       "C054                        1.0  2023-12-02    Bronze   103.0\n",
-       "C071                        3.0  2023-12-03    Silver  9603.0\n",
-       "C046                        3.0  2023-12-04    Silver  2412.0\n",
-       "C045                        3.0  2023-12-05  Platinum  1209.0\n",
-       "C040                        9.0  2023-12-06       NaN     NaN\n",
-       "C023                        4.0  2023-12-07       NaN     NaN\n",
-       "C081                        6.0  2023-12-08       NaN     NaN\n",
-       "C011                        7.0  2023-12-09       NaN     NaN\n",
-       "C001                        5.0  2023-12-10      Gold  3754.0"
+       "C054                        1.0  2023-12-02      Gold  8568.0\n",
+       "C071                       10.0  2023-12-03    Bronze  6256.0\n",
+       "C046                        2.0  2023-12-04    Silver  6258.0\n",
+       "C045                        9.0  2023-12-05    Silver  5863.0\n",
+       "C040                        2.0  2023-12-06       NaN     NaN\n",
+       "C023                        3.0  2023-12-07       NaN     NaN\n",
+       "C081                        1.0  2023-12-08       NaN     NaN\n",
+       "C011                       10.0  2023-12-09       NaN     NaN\n",
+       "C001                        1.0  2023-12-10  Platinum  9957.0"
       ]
      },
      "metadata": {},
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "f7470e72",
    "metadata": {},
    "outputs": [
@@ -2316,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "f644d81f",
    "metadata": {},
    "outputs": [
@@ -2331,7 +2331,7 @@
    "source": [
     "# TODO: Save customer_metrics to output/q2_combined_data.csv\n",
     "# Hint: Use .to_csv() - index will be saved automatically\n",
-    "customer_metrics.to_csv(\"q2_combined_data.csv\")\n",
+    "customer_metrics.to_csv(\"output/q2_combined_data.csv\")\n",
     "\n",
     "print(\"✓ Saved output/q2_combined_data.csv\")"
    ]
@@ -2352,10 +2352,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "6575d15b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m full_data = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Add month column for grouping (YYYY-MM format like \"2023-01\")\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m full_data[\u001b[33m'\u001b[39m\u001b[33mmonth\u001b[39m\u001b[33m'\u001b[39m] = pd.to_datetime(\u001b[43mfull_data\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mpurchase_date\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m).dt.strftime(\u001b[33m'\u001b[39m\u001b[33m%\u001b[39m\u001b[33mY-\u001b[39m\u001b[33m%\u001b[39m\u001b[33mm\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      9\u001b[39m display(full_data.head())\n",
+      "\u001b[31mTypeError\u001b[39m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Load the merged data from Question 1\n",
     "# This already has purchases merged with customers and products (and total_price calculated)\n",
